@@ -52,7 +52,7 @@ public class SshX509RsaSha1PublicKey extends Ssh2RsaPublicKey {
 	 * Get the algorithm name for the public key.
 	 * 
 	 * @return the algorithm name, for example "ssh-dss"
-	 * @todo Implement this com.maverick.ssh.SshPublicKey method
+	 * @todo Implement this com.sshtools.ssh.SshPublicKey method
 	 */
 	public String getAlgorithm() {
 		return X509V3_SIGN_RSA_SHA1;
@@ -64,7 +64,7 @@ public class SshX509RsaSha1PublicKey extends Ssh2RsaPublicKey {
 	 * 
 	 * @return an encoded byte array
 	 * @throws SshException
-	 * @todo Implement this com.maverick.ssh.SshPublicKey method
+	 * @todo Implement this com.sshtools.ssh.SshPublicKey method
 	 */
 	public byte[] getEncoded() throws SshException {
 		ByteArrayWriter baw = new ByteArrayWriter();
@@ -93,7 +93,7 @@ public class SshX509RsaSha1PublicKey extends Ssh2RsaPublicKey {
 	 * @param len
 	 *            int
 	 * @throws SshException
-	 * @todo Implement this com.maverick.ssh.SshPublicKey method
+	 * @todo Implement this com.sshtools.ssh.SshPublicKey method
 	 */
 	public void init(byte[] blob, int start, int len) throws SshException {
 
